--- a/core/recipe/templates/recipes.html
+++ b/core/recipe/templates/recipes.html
@@ -22,8 +22,25 @@
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 
+    <div class="mt-5">
+      <div class="mx-auto col-6">
+        <form action="">
+        <div class="mb-3">
+          <label for="exampleInputEmail" class="form-label">Search food</label>
+          <input name="search"  type="text" class="form-control">
+        </div>
+
+
+        <button type="submit" class="btn btn-primary">Search</button>
+
+      </form>
+        
+
+      </div>
+    </div>
+
     
-    <table class="table">
+    <table class="table mt-5">
         <thead>
           <tr>
             <th scope="col">#</th>
@@ -43,7 +60,9 @@
                 <img src="/media/{{recipe.image}}" style="height: 100px;"></td>
                 <td>
                     <a href="/recipes/{{recipe.id}}" class=" btn btn-danger">Delete</a>
+                    <a href="/update-recipes/{{recipe.id}}" class="btn btn-success " >Update</a>
                 </td>
+                
             
           </tr>
           {% endfor %}
